<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="declared_permission">Permissions</string>
    <string name="about">About</string>
    <string name="installer_app">Installer app</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="license">License</string>
    <string name="license_message" translatable="false"><a href="https://www.gnu.org/licenses/gpl-3.0.html">GNU General
        Public License v3.0</a></string>
    <string name="copyright_message" translatable="false">© 2020–2025 <a href="https://github.com/MuntashirAkon">Muntashir Al-Islam</a></string>
    <string name="third_party">Third-party libraries and icons</string>
    <string name="credits">Credits</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="force_stop">Force-stop</string>
    <string name="app_ops">App ops</string>
    <string name="pref_import_watt">Import from Watt</string>
    <string name="pref_import_blocker">Import from Blocker</string>
    <string name="clear_data">Clear data</string>
    <string name="backup_restore">Backup/restore</string>
    <string name="export_blocking_rules">Export blocking rules</string>
    <string name="pref_import">Import</string>
    <string name="pref_export">Export</string>
    <string name="pref_export_msg">Export blocking rules configured within App Manager to external storage.</string>
    <string name="pref_import_msg">Import previously exported blocking rules from App Manager.</string>
    <string name="pref_import_watt_msg">Import blocking rules from Watt, each file containing rules for a single named package as <tt>packagename.xml</tt> etc.</string>
    <string name="pref_import_blocker_msg">Import blocking rules from Blocker, each file containing rules for a single package.</string>
    <string name="pref_about_msg">App Manager version, license, credits, etc.</string>
    <string name="block_trackers">Block trackers</string>
    <string name="source_code">Source code</string>
    <string name="source_code_links" translatable="false"><a href="https://github.com/MuntashirAkon/AppManager">GitHub</a> •
        <a href="https://codeberg.org/muntashir/AppManager">Codeberg</a> •
        <a href="https://gitlab.com/muntashir/AppManager">GitLab</a> •
        <a href="https://0xacab.org/muntashir/AppManager">Riseup</a> •
        <a href="https://git.sr.ht/~muntashir/AppManager">sourcehut</a></string>
    <string name="community">Community</string>
    <string name="community_links"><a href="https://matrix.to/#/#appmanager:matrix.org">Matrix</a> •
        <a href="https://t.me/AppManagerChannel">Telegram</a> •
        <a href="https://x.com/AppManagerNews">Twitter/X</a> •
        <a href="https://floss.social/@appmanager">Mastodon</a></string>
    <string name="pref_import_existing">Import existing rules</string>
    <string name="pref_import_existing_msg">Add components disabled by others apps to App Manager.
        Be careful when using this tool as there can be many false positives. Choose only the apps you\'re certain about.</string>
    <string name="clear_cache">Clear cache</string>
    <string name="components">Components</string>
    <string name="backup_options">Backup options</string>
    <string name="clear">Clear</string>
    <string name="website">Website</string>
    <string name="pref_app_language">Language</string>
    <string name="rules">Rules</string>
    <string name="pref_compression_method">Compression method</string>
    <string name="pref_backup_flags_msg">Adding a preset for backup options removes the burden of selecting flags every time you back up/restore.</string>
    <string name="copy">Copy</string>
    <string name="encryption">Encryption</string>
    <string name="pref_encryption_msg">Encryption for backups.</string>
    <string name="pref_mode_of_operations">Mode of operation</string>
    <string name="allow_routine_ops">Allow routine ops</string>
    <string name="allow_routine_ops_msg">Allow the profile to be used in the routine operations</string>
    <string name="profile_force_stop_msg">Force-stops apps</string>
    <string name="profile_clear_cache_msg">Clears the app cache of apps</string>
    <string name="profile_clear_data_msg">Clears the data of apps</string>
    <string name="profile_block_trackers_msg">Blocks the trackers in apps</string>
    <string name="profile_state_msg">Custom on/off state for this profile</string>
    <string name="comment">Comment</string>
    <string name="installer">Installer</string>
    <string name="install_location">Install location</string>
    <string name="pref_sign_apk">Sign APK</string>
    <string name="pref_sign_apk_msg">Sign APK files before installing them.</string>
    <string name="apk_signing">APK signing</string>
    <string name="pref_apk_signing_msg">Set signature schemes, custom signing key, etc.</string>
    <string name="pref_backup_android_keystore">Back up apps with Android KeyStore</string>
    <string name="pref_backup_android_keystore_msg">Not all apps will work after being restored. Restoring KeyStore doesn\'t work on most devices.</string>
    <string name="share">Share</string>
    <string name="about_device">About the device</string>
    <string name="pref_about_device_msg">Basic device info including Android system, CPU, GPU, RAM, battery, etc.</string>
    <string name="users">Users</string>
    <string name="pref_backup_restore_msg">Customise backup/restore.</string>
    <string name="backup_volume">Backup volume</string>
    <string name="pref_backup_volume_msg">Select the volume or disk where the backups will be stored.</string>
    <string name="pref_installer_msg">Configure the behaviours of the app installer.</string>
    <string name="pref_import_backups">Import backups</string>
    <string name="pref_import_backups_msg">Import backups from OAndBackup, Swift Backup (3.0–3.2) or Titanium Backup.</string>
    <string name="log_viewer">Log viewer</string>
    <string name="pref_log_viewer_msg">Configure how logs are displayed.</string>
    <string name="log_level">Log level</string>
    <string name="manage_saved_logs">Manage saved logs</string>
    <string name="open">Open</string>
    <string name="pref_buffer_title">Log buffer(s)</string>
    <string name="pref_cat_advanced">Advanced</string>
    <string name="pref_cat_appearance">Appearance</string>
    <string name="pref_cat_configuration">Configuration</string>
    <string name="pref_default_log_level_summary">Log level at startup, when opening files, and when recording.</string>
    <string name="pref_default_log_level_title">Default log level</string>
    <string name="pref_display_limit_summary" tools:ignore="PluralsCandidate">Show only the last %1$d logs in order to avoid out of memory errors.</string>
    <string name="pref_display_limit_title">Log display limit</string>
    <string name="pref_filter_pattern_summary">Filter out the selected tags from logs.</string>
    <string name="pref_filter_pattern_title">Filter out tags</string>
    <string name="pref_expanded_by_default_summary">Show full log text by default.</string>
    <string name="pref_expanded_by_default_title">Expand by default</string>
    <string name="pref_log_write_period_summary" tools:ignore="PluralsCandidate">When recording, write to SD card every %1$d lines.</string>
    <string name="pref_log_write_period_title">Write period</string>
    <string name="pref_show_timestamp_summary">Show process id and timestamp when expanded.</string>
    <string name="pref_show_timestamp_title">Show PID &amp; timestamp</string>
    <string name="settings">Settings</string>
    <string name="start_recording_log">Record</string>
    <string name="file">File</string>
    <string name="expand_all">Expand all</string>
    <string name="pause_unpause">Play/pause</string>
    <string name="omit_sensitive_info">Omit sensitive info</string>
    <string name="omit_sensitive_info_summary">Omit sensitive info like web urls, phone numbers or emails.</string>
    <string name="share_log">Share</string>
    <string name="save_apk">Save APK</string>
    <string name="profile_save_apk_msg">Saves APK files in <tt>AppManager/apks</tt></string>
    <string name="pref_rules_msg">Instant blocking, import/export/remove rules, etc.</string>
    <string name="pref_display_changes">Display changes</string>
    <string name="pref_display_changes_msg">Display changes in version, trackers, components, permissions, signatures, SDK, etc. in a version controlled manner.</string>
    <string name="saved_filters">Saved filters</string>
    <string name="files">Files</string>
    <string name="pref_block_trackers_msg">Block tracking components after installing an app using App Manager.</string>
    <string name="pref_always_on_background">Install in the background</string>
    <string name="pref_always_on_background_msg">Always install apps in the background and display a notification when finished.</string>
    <string name="rename">Rename</string>
    <string name="pref_vt_apikey_summary">Enable scanning APK files via VirusTotal.</string>
    <string name="freeze">Freeze</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="profile_freeze_msg">Freezes or unfreezes apps based on state</string>
    <string name="pref_appearance_description">Theme, orientation, features, etc.</string>
    <string name="pref_privacy">Privacy</string>
    <string name="pref_privacy_description">Screen lock, authorization, etc.</string>
    <string name="user_manual">User manual</string>
    <string name="get_help">Get help</string>
    <string name="pref_advanced_pref">Users, APK name format, parallel execution, etc.</string>
    <string name="pref_version_changelog">Version/changelog</string>
    <string name="file_open_with">Open with</string>
    <string name="file_properties">Properties</string>
    <string name="file_cut">Cut</string>
    <string name="app_manager_build_expiring_soon_warning">This version of App Manager will expire very soon. Please update it to the latest version.</string>
    <string name="funding_campaign_text">We\'re running a <b>funding campaign</b> for App Manager for a limited period. <a href="https://opencollective.com/app-manager#category-ABOUT">learn more…</a></string>
    <string name="optimize_option_force_dexopt">Immediately perform DEX optimization</string>
    <string name="copy_this_path">Copy path</string>
    <string name="pref_installer_force_dexopt_description">Perform DEX optimization immediately after installing the app without waiting for the system to do it when the system is idle.</string>
    <string name="pref_files_msg">Configure file manager.</string>
    <string name="profile_id">Profile ID</string>
    <string name="virus_total">VirusTotal</string>
    <string name="pref_use_log_viewer">Use log viewer</string>
    <string name="pref_installer">Use the installer</string>
    <string name="pref_cat_general">General</string>
    <string name="pref_request_update_ownership">Request \"update ownership\"</string>
    <string name="pref_default_package_source">Default package source</string>
    <string name="pref_set_origin">Set package origin and URI</string>
    <string name="pref_request_update_ownership_description">Set the installer app as the \"update owner\" during the initial installation to prevent other installers from installing the app without user interaction.</string>
    <string name="pref_set_origin_description">Record the origin or source of the app to be installed, reported by \"APK source\" in the App Info tab</string>
    <string name="pref_disable_apk_verification">Disable package verification</string>
    <string name="pref_disable_apk_verification_description">Ask the installer to skip running the package verifier (e.g., Play Protect) during the installation.</string>
</resources>