<!-- SPDX-License-Identifier: GPL-3.0-or-later -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <io.github.muntashirakon.preference.TopSwitchPreference
        app:iconSpaceReserved="false"
        app:key="use_installer"
        app:persistent="false"
        app:title="@string/pref_installer" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="cat_general"
        app:title="@string/pref_cat_general">

        <Preference
            app:iconSpaceReserved="false"
            app:key="installer_install_location"
            app:title="@string/install_location"
            tools:summary="Auto" />


        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="installer_block_trackers"
            app:summary="@string/pref_block_trackers_msg"
            app:title="@string/block_trackers" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="installer_display_changes"
            app:summary="@string/pref_display_changes_msg"
            app:title="@string/pref_display_changes" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="cat_advanced"
        app:title="@string/pref_cat_advanced">

        <Preference
            app:iconSpaceReserved="false"
            app:key="installer_installer_app"
            app:title="@string/installer_app"
            tools:summary="App Manager" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="installer_disable_verification"
            app:summary="@string/pref_disable_apk_verification_description"
            app:title="@string/pref_disable_apk_verification" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="installer_update_ownership"
            app:summary="@string/pref_request_update_ownership_description"
            app:title="@string/pref_request_update_ownership" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="installer_default_pkg_source"
            app:title="@string/pref_default_package_source"
            tools:summary="Other" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="installer_set_origin"
            app:summary="@string/pref_set_origin_description"
            app:title="@string/pref_set_origin" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="installer_sign_apk"
            app:summary="@string/pref_sign_apk_msg"
            app:title="@string/pref_sign_apk" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="installer_force_dex_opt"
            app:summary="@string/pref_installer_force_dexopt_description"
            app:title="@string/optimize_option_force_dexopt" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="installer_always_on_background"
            app:summary="@string/pref_always_on_background_msg"
            app:title="@string/pref_always_on_background" />

    </PreferenceCategory>

</PreferenceScreen>