<!-- SPDX-License-Identifier: GPL-3.0-or-later -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_play_pause"
        android:icon="@drawable/ic_pause"
        android:title="@string/pause_unpause"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_expand_collapse"
        android:icon="@drawable/ic_expand_more"
        android:title="@string/expand_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_brush"
        android:title="@string/clear"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_file_document"
        android:title="@string/file">

        <menu>
            <item
                android:id="@+id/action_open"
                android:icon="@drawable/ic_folder"
                android:title="@string/open" />

            <item
                android:id="@+id/action_save"
                android:icon="@drawable/ic_content_save"
                android:title="@string/save" />

            <item
                android:id="@+id/action_record"
                android:icon="@drawable/ic_record_rec"
                android:title="@string/start_recording_log" />

            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/ic_trash_can"
                android:title="@string/manage_saved_logs" />
        </menu>
    </item>

    <item
        android:id="@+id/action_change_log_level"
        android:icon="@drawable/ic_sort"
        android:title="@string/log_level" />

    <item
        android:id="@+id/action_show_saved_filters"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/saved_filters" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share_log" />

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_file_export"
        android:title="@string/pref_export" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/action_crazy_logger_service"
        android:title="Crazy Logger"
        tools:ignore="HardcodedText" />

</menu>